[gd_scene load_steps=8 format=3 uid="uid://jbcmjiw4x7uh"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_f43ui"]
[ext_resource type="Texture2D" uid="uid://ddyv3cjqjyaac" path="res://art/player/player_texture.png" id="2_qfp65"]
[ext_resource type="AudioStream" uid="uid://bv5h86syc1r7o" path="res://sounds/walking.mp3" id="3_q38jn"]
[ext_resource type="AudioStream" uid="uid://b5v4fig83rrkb" path="res://sounds/crouching.mp3" id="4_4iq1n"]
[ext_resource type="AudioStream" uid="uid://1upq1ldwsqtg" path="res://sounds/sprinting.mp3" id="5_tp456"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ttkfa"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2j7n4"]
radius = 15.0

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_f43ui")

[node name="player_area" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="player_area"]
shape = SubResource("CircleShape2D_ttkfa")

[node name="sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_qfp65")

[node name="collision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2j7n4")

[node name="camera" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
position_smoothing_enabled = true

[node name="raycast" type="RayCast2D" parent="."]
visible = false
collision_mask = 2
collide_with_areas = true

[node name="walking_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_q38jn")

[node name="crouching_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_4iq1n")

[node name="sprinting_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_tp456")
